Update windows.md
updated the installation steps updates specifically required to perform a working install on Windows 10.
-> corrected the JAVA_PATH with the recommended updated Zulu path
-> modified wrapper.conf so that it includes the changes which allow the Windows service to start.
Ref: https://community.openhab.org/t/oh3-installation-service-fails-to-start-cannot-create-java-virtual-machine/110430/17